# Moira

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  memory_system.py  pyproject.toml  requirements.txt  world_data.py
agents/: actor.py  audience.py  base_agent.py  director.py
docs/: architecture.md  module-roadmap.md
src/moira/: __init__.py  main.py
src/moira/api/: __init__.py  dependencies.py  router.py
src/moira/api/routes/: health.py  runs.py
src/moira/application/dto/: __init__.py  run_dto.py
src/moira/application/ports/: __init__.py  run_repository.py
src/moira/application/services/: run_service.py
src/moira/core/: config.py  logging.py
src/moira/domain/: narrative.py
src/moira/infrastructure/repositories/: in_memory_run_repository.py
tests/: test_health.py
utils/: logger.py  prompt_manager.py
word_engine/: core.py
world_engine/: core.py
